# cg

./: README.md
canvas/: draw.js  index.html  pick.js  style.css
canvas/elements/: bezier.js  circle.js  line.js  point.js  polygon.js
cgal/: CMakeLists.txt  cgal_cg.cpp  cgal_cg.ui
ogl-cube/: CMakeLists.txt
ogl-cube/cube/: cubeview.cpp  tutorial04.cpp
pick/: index.html  pickReta.js
w2v/: w2v.html  w2v.py
